@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+19-Jan-2002 (Lars Duening)  (3.3.364)
+  - (configure) The '--with-malloc' option didn't quite work (reported
+       by Nostradamus).
+
 19-Jan-2002 (Lars Duening)  (3.3.363)
   - (structs.c, gcollect) The GC crashed when encountering self-referential
        structs (reported by Nostradamus).
